# utils/models/user.go
@@ -59,10 +59,11 @@ type AddressInfo struct {
 	Pin       string `json:"pin" validate:"required"`
 }
 type UsersProfileDetails struct {
-	Firstname string `json:"firstname" `
-	Lastname  string `json:"lastname" `
-	Email     string `json:"email" `
-	Phone     string `json:"phone" `
+	Firstname    string `json:"firstname" `
+	Lastname     string `json:"lastname" `
+	Email        string `json:"email" `
+	Phone        string `json:"phone" `
+	ReferralCode string `json:"referral_code"`
 }
 
 type UpdatePassword struct {
